# dialect_mediator

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
dialect_mediator/: service.py
dialect_mediator.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
dialect_mediator/core/: mediator.py  models.py  ports.py
dialect_mediator/llm/: base.py  gemini_client.py  gemini_list.py  openai_client.py
dialect_mediator/profiles/: base.py  venezuelan.py
scripts/: test_mediation_gemini.py
tests/: test_mediator_behavior.py  test_smoke.py
