[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dialect-mediator"
version = "0.0.0"
description = "A dialect mediator to make language universal"
requires-python = ">=3.10"
authors = [
    {name = "Dialect Mediator Team"}
]
license = {text = "MIT"}
dependencies = [
    "google-generativeai>=0.6.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0"
]

[tool.setuptools.packages.find]
where = ["."]
